--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,8 @@
         "php": "^8.2.2",
         "october/rain": "^3.6",
         "laravel/framework": "^10.0",
-        "october/all": "^3.6"
+        "october/all": "^3.6",
+        "stdevs/dom-plugin": "dev-master"
     },
     "require-dev": {
         "phpunit/phpunit": "^8.5|^9.0"
@@ -48,6 +49,10 @@
     "minimum-stability": "stable",
     "prefer-stable": true,
     "repositories": {
+        "stdevs/dom-plugin": {
+            "type": "git",
+            "url": "git@github.com:mateuszR84/dom.git"
+        },
         "octobercms": {
             "type": "composer",
             "url": "https://gateway.octobercms.com",
