--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,8 @@
         "october/rain": "^3.6",
         "laravel/framework": "^10.0",
         "october/all": "^3.6",
-        "stdevs/dom-plugin": "dev-master"
+        "stdevs/dom-plugin": "dev-master",
+        "rainlab/user-plugin": "^3.1"
     },
     "require-dev": {
         "phpunit/phpunit": "^8.5|^9.0"
