--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,8 @@
         "laravel/framework": "^10.0",
         "october/all": "^3.6",
         "stdevs/dom-plugin": "dev-master",
-        "rainlab/user-plugin": "^3.1"
+        "rainlab/user-plugin": "^3.1",
+        "algolia/scout-extended": "^3.0"
     },
     "require-dev": {
         "phpunit/phpunit": "^8.5|^9.0"
