--- a/composer.json
+++ b/composer.json
@@ -10,11 +10,8 @@
         "laravel/framework": "^10.0",
         "october/all": "^3.6",
         "stdevs/dom-plugin": "dev-master",
-<<<<<<< Updated upstream
-        "rainlab/user-plugin": "^3.1"
-=======
+        "rainlab/user-plugin": "^3.1",
         "stdevs/websitesmanager-plugin": "dev-master"
->>>>>>> Stashed changes
     },
     "require-dev": {
         "phpunit/phpunit": "^8.5|^9.0"
