--- a/.gitignore
+++ b/.gitignore
@@ -60,7 +60,7 @@ node_modules/
 # ----------------------------------------------------------
 
 # Misc
-!.github/workflows/deploy.yaml
+!.github/workflows/stage_deploy.yaml
 !.gitignore
 !.editorconfig
 !composer.json
