--- a/.github/workflows/stage_deploy.yml
+++ b/.github/workflows/stage_deploy.yml
@@ -20,5 +20,5 @@ jobs:
                   host: ${{ secrets.HOST }}
                   username: ${{ secrets.USERNAME }}
                   port: ${{ secrets.PORT }}
-                  key: ${{ secrets.SSHKEY }}
-                  script: "cd /home/${{ secrets.USERNAME }}/ && ~/myscripts/deploy.sh"
+                  password: ${{ secrets.PASSWORD }}
+                  script: whoami
