--- a/.github/workflows/stage_deploy.yml
+++ b/.github/workflows/stage_deploy.yml
@@ -23,4 +23,5 @@ jobs:
                   password: ${{ secrets.PASSWORD }}
                   script: |
                     cd /home/${{ secrets.USERNAME }}/webapps/studiodevs/current/public
+                    pwd
                     deploy.sh
