portfolio pages are using components from plugin

--- a/plugins/stdevs/toolbox/models/project/columns.yaml
+++ b/plugins/stdevs/toolbox/models/project/columns.yaml
@@ -3,6 +3,15 @@
 # ===================================
 
 columns:
-    id:
-        label: ID
-        searchable: true
+    title:
+        label: stdevs.toolbox::lang.models.project.title
+    url:
+        label: stdevs.toolbox::lang.models.project.url
+        type: linkage
+        attributes:
+            target: _blank
+    slug:
+        label: stdevs.toolbox::lang.models.project.slug
+    completed_at:
+        label: stdevs.toolbox::lang.models.project.completed_at
+
