--- a/.github/workflows/stage_deploy.yml
+++ b/.github/workflows/stage_deploy.yml
@@ -14,7 +14,7 @@ jobs:
         runs-on: ubuntu-latest
         steps:
             - uses: actions/checkout@v2
-            - name: Deploy to testing
+            - name: Deploy to staging
               uses: appleboy/ssh-action@master
               with:
                   host: ${{ secrets.HOST }}
