--- a/.gitignore
+++ b/.gitignore
@@ -21,6 +21,7 @@ themes/*
 # Ignore everything in the "plugins" directory, except your own namespace
 plugins/*
 !plugins/stdevs/toolbox
+!plugins/stdevs/toolbox/**
 
 # If you have a mixture of private (in repo) and public (published to market)
 # plugins, uncomment the following line to ignore all plugins in your namespace
