--- a/.github/workflows/stage_deploy.yml
+++ b/.github/workflows/stage_deploy.yml
@@ -1,27 +1,157 @@
 name: Deploy to staging
 
-# Trigger the workflow on push and
-# pull request events on the production branch
+# Trigger the workflow only on push to develop branch
 on:
-    push:
-        branches:
-            - develop
+  push:
+    branches:
+      - develop
 
-# Authenticate to the the server via ssh
-# and run our deployment script
+# Set default environment variables
+env:
+  DEPLOY_BRANCH: develop
+  COMPOSER_CMD: composer
+  PHP_CMD: php
+  MAX_BACKUPS: 5
+  STAGING_URL: https://stage.studiodevs.pl
+
 jobs:
-    deploy:
-        runs-on: ubuntu-latest
-        steps:
-            - uses: actions/checkout@v2
-            - name: Deploy to staging
-              uses: appleboy/ssh-action@master
-              with:
-                  host: ${{ secrets.HOST }}
-                  username: ${{ secrets.USERNAME }}
-                  port: ${{ secrets.PORT }}
-                  password: ${{ secrets.PASSWORD }}
-                  script: |
-                    cd /home/${{ secrets.USERNAME }}/webapps/studiodevs_stage/current/public
-                    pwd
-                    /home/${{ secrets.USERNAME }}/webapps/studiodevs_stage/current/public/deploy.sh
+  # Job do walidacji kodu (opcjonalny - uruchamia się przed deploymentem)
+  validate:
+    runs-on: ubuntu-latest
+    if: github.event_name == 'push'
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+        with:
+          fetch-depth: 2 # Pobierz ostatnie 2 commity dla porównania
+
+      - name: Setup PHP
+        uses: shivammathur/setup-php@v2
+        with:
+          php-version: '8.3'
+          extensions: mbstring, xml, ctype, iconv, intl, pdo, pdo_mysql, dom, filter, gd, json
+
+      - name: Validate composer.json
+        run: composer validate --strict
+
+      - name: Check for syntax errors
+        run: find . -name "*.php" -not -path "./vendor/*" -exec php -l {} \;
+
+  # Główny job deploymentu
+  deploy:
+    runs-on: ubuntu-latest
+    needs: validate
+    if: github.event_name == 'push'
+
+    environment: staging
+
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+
+      - name: Notify deployment start
+        uses: 8398a7/action-slack@v3
+        with:
+          status: custom
+          custom_payload: |
+            {
+              attachments: [{
+                color: 'warning',
+                text: `🚀 Deployment started\nBranch: ${process.env.GITHUB_REF_NAME}\nCommit: ${process.env.GITHUB_SHA.substring(0, 7)}\nAuthor: ${process.env.GITHUB_ACTOR}`
+              }]
+            }
+        env:
+          SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK }}
+
+      - name: Deploy to staging
+        uses: appleboy/ssh-action@v1.0.3
+        with:
+          host: ${{ secrets.HOST }}
+          username: ${{ secrets.USERNAME }}
+          port: ${{ secrets.PORT }}
+          password: ${{ secrets.PASSWORD }}
+          timeout: 300s
+          command_timeout: 300s
+
+          envs: DEPLOY_BRANCH,COMPOSER_CMD,PHP_CMD,MAX_BACKUPS,HEALTH_CHECK_URL,SLACK_WEBHOOK,BACKUP_DIR
+          script: |
+            # Ustaw zmienne środowiskowe dla skryptu deploy
+            export DEPLOY_BRANCH=${{ env.DEPLOY_BRANCH }}
+            export COMPOSER_CMD=${{ env.COMPOSER_CMD }}
+            export PHP_CMD=${{ env.PHP_CMD }}
+            export MAX_BACKUPS=${{ env.MAX_BACKUPS }}
+            export HEALTH_CHECK_URL="${{ secrets.HEALTH_CHECK_URL }}"
+            export SLACK_WEBHOOK="${{ secrets.SLACK_WEBHOOK }}"
+            export BACKUP_DIR= /home/${{ secrets.USERNAME }}/webapps/studiodevs_stage/backups
+
+            # Przejdź do katalogu z aplikacją (dla skryptu deploy)
+            cd /home/${{ secrets.USERNAME }}/webapps/studiodevs_stage/current/public
+
+            # Ścieżka do skryptu deploy (poziom wyżej)
+            DEPLOY_SCRIPT="/home/${{ secrets.USERNAME }}/webapps/studiodevs_stage/deploy.sh"
+
+            # Sprawdź czy skrypt deploy istnieje i ma uprawnienia do wykonania
+            if [ ! -f "$DEPLOY_SCRIPT" ]; then
+              echo "Error: deploy.sh not found at $DEPLOY_SCRIPT"
+              exit 1
+            fi
+
+            if [ ! -x "$DEPLOY_SCRIPT" ]; then
+              echo "Making deploy.sh executable..."
+              chmod +x "$DEPLOY_SCRIPT"
+            fi
+
+            # Uruchom skrypt deploy
+            "$DEPLOY_SCRIPT"
+
+      - name: Notify deployment success
+        if: success()
+        uses: 8398a7/action-slack@v3
+        with:
+          status: success
+          text: |
+            ✅ Deployment completed successfully!
+            Branch: ${{ github.ref_name }}
+            Commit: ${{ github.sha }}
+            Environment: staging
+        env:
+          SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK }}
+
+      - name: Notify deployment failure
+        if: failure()
+        uses: 8398a7/action-slack@v3
+        with:
+          status: failure
+          text: |
+            ❌ Deployment failed!
+            Branch: ${{ github.ref_name }}
+            Commit: ${{ github.sha }}
+            Environment: staging
+            Please check the logs for more details.
+        env:
+          SLACK_WEBHOOK_URL: ${{ secrets.SLACK_WEBHOOK }}
+
+  # Post deployment tests
+  post_deploy_tests:
+    runs-on: ubuntu-latest
+    needs: deploy
+    if: success()
+
+    steps:
+      - name: Wait for application startup
+        run: sleep 30
+
+      - name: Run health check
+        run: |
+          curl -f -s "${{ secrets.HEALTH_CHECK_URL }}" || exit 1
+          echo "Health check passed!"
+
+      - name: Run basic smoke tests
+        run: |
+          # Sprawdź czy strona główna odpowiada
+          response=$(curl -s -o /dev/null -w "%{http_code}" "${{ env.STAGING_URL }}")
+          if [ "$response" != "200" ]; then
+            echo "Main page check failed with status: $response"
+            exit 1
+          fi
+          echo "Smoke tests passed!"
