--- a/.github/workflows/prod_deploy.yml
+++ b/.github/workflows/prod_deploy.yml
@@ -4,7 +4,7 @@ name: Deploy to production
 on:
   push:
     branches:
-      - develop
+      - master
 
 # Set default environment variables
 env:
