--- a/composer.json
+++ b/composer.json
@@ -12,8 +12,7 @@
         "stdevs/dom-plugin": "dev-master",
         "rainlab/user-plugin": "^3.1",
         "stdevs/websitesmanager-plugin": "^1.0",
-        "studiodevs/nudge-plugin": "^1.0",
-        "publipresse/forms-plugin": "^2.0"
+        "studiodevs/nudge-plugin": "^1.0"
     },
     "require-dev": {
         "phpunit/phpunit": "^8.5|^9.0"
