--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,8 @@
         "october/all": "^4.0",
         "rainlab/user-plugin": "^3.1",
         "stdevs/websitesmanager-plugin": "^1.0",
-        "studiodevs/nudge-plugin": "^1.0"
+        "studiodevs/nudge-plugin": "^1.0",
+        "blakejones/magicforms-plugin": "^1.6"
     },
     "require-dev": {
         "phpunit/phpunit": "^8.5|^9.0"
@@ -51,10 +52,6 @@
     "minimum-stability": "stable",
     "prefer-stable": true,
     "repositories": {
-        "stdevs/dom-plugin": {
-            "type": "git",
-            "url": "git@github.com:mateuszR84/dom.git"
-        },
         "stdevs/websitesmanager-plugin": {
             "type": "git",
             "url": "git@github.com:mateuszR84/websitesmanager.git"
