tagging article works

--- a/plugins/studiodevs/wiki/models/article/fields.yaml
+++ b/plugins/studiodevs/wiki/models/article/fields.yaml
@@ -16,9 +16,8 @@ fields:
         type: taglist
         span: right
         mode: relation
-        separator: comma
         nameFrom: name
-        valueFrom: id
+        useKey: false
 
 tabs:
     fields:
