--- a/plugins/studiodevs/wiki/models/tag/columns.yaml
+++ b/plugins/studiodevs/wiki/models/tag/columns.yaml
@@ -5,5 +5,6 @@
 columns:
     name:
         label: studiodevs.wiki::lang.models.tag.name
-        type: text
-        span: full
+    color:
+        label: studiodevs.wiki::lang.models.tag.name
+        type: colorpicker
