--- a/plugins/studiodevs/wiki/models/tag/fields.yaml
+++ b/plugins/studiodevs/wiki/models/tag/fields.yaml
@@ -7,3 +7,8 @@ fields:
         label: studiodevs.wiki::lang.models.tag.name
         type: text
         span: left
+
+    color:
+        label: studiodevs.wiki::lang.models.tag.color
+        type: colorpicker
+        span: left
